--- a/Prototype/PacientProfileMed.html
+++ b/Prototype/PacientProfileMed.html
@@ -189,9 +189,6 @@
     
              <!-- LATEST VALUES -->
              <hr class="hr1">
-                <div class="alignitems" style="margin-bottom: 30px;">
-                   <input type="button" value="Information from latest measurements" name="latestInfo" id="latestInfo"  class="switch-btn" onclick="">
-                </div>
              <div id="latestInf">
                 <div class="row"> 
                    <div class="col-md-4"> <b>Blood Pressure</b>
@@ -209,7 +206,7 @@
     
                 <br>
                 <div class="row"> 
-                   <div  class="col-md-6"> <b>Sugar Level</b>
+                   <div  class="col-md-6"> <b>Glycemia</b>
                       <p id="latest_sl"></p>
                    </div>
                    <div  class="col-md-6"> <b>Oxygen Saturation</b>
