Connection between html pages done

--- a/Prototype/MedStaffPage.html
+++ b/Prototype/MedStaffPage.html
@@ -139,7 +139,7 @@
                         <p class="age">... anos</p>
                         <a href="#"><i class="fa fa-dribbble"></i></a>
                         <p>
-                            <form action="Regist/PacientsRegister.html">
+                            <form action="PacientProfileMed.html">
                                 <button type="submit">See More</button>
                             </form>
                         </p>
@@ -151,7 +151,7 @@
                         <p class="age">... anos</p>
                         <a href="#"><i class="fa fa-dribbble"></i></a>
                         <p>
-                            <form action="Regist/PacientsRegister.html">
+                            <form action="PacientProfileMed.html">
                                 <button type="submit">See More</button>
                             </form>
                         </p>
@@ -163,7 +163,7 @@
                         <p class="age">... anos</p>
                         <a href="#"><i class="fa fa-dribbble"></i></a>
                         <p>
-                            <form action="Regist/PacientsRegister.html">
+                            <form action="PacientProfileMed.html">
                                 <button type="submit">See More</button>
                             </form>
                         </p>
@@ -183,7 +183,7 @@
                         <p class="age">... anos</p>
                         <a href="#"><i class="fa fa-dribbble"></i></a>
                         <p>
-                            <form action="Regist/PacientsRegister.html">
+                            <form action="PacientProfileMed.html">
                                 <button type="submit">See More</button>
                             </form>
                         </p>
@@ -195,7 +195,7 @@
                         <p class="age">... anos</p>
                         <a href="#"><i class="fa fa-dribbble"></i></a>
                         <p>
-                            <form action="Regist/PacientsRegister.html">
+                            <form action="PacientProfileMed.html">
                                 <button type="submit">See More</button>
                             </form>
                         </p>
@@ -207,7 +207,7 @@
                         <p class="age">... anos</p>
                         <a href="#"><i class="fa fa-dribbble"></i></a>
                         <p>
-                            <form action="Regist/PacientsRegister.html">
+                            <form action="PacientProfileMed.html">
                                 <button type="submit">See More</button>
                             </form>
                         </p>
@@ -219,7 +219,7 @@
 
         <div class="container">
             
-            <form action="Regist/PacientsRegister.html">
+            <form action="Regist/PacientsRegisterByMedStaff.html">
                 <button type="submit">Add Pacient</button>
             </form>
         </div>
