Update of webpages

--- a/Prototype/PacientProfile.html
+++ b/Prototype/PacientProfile.html
@@ -133,26 +133,26 @@
                   <br>
                   <div class="row">
                      <div class="col-6 col-md-4">
-                        <b>Name: </b>
+                        <b>Name: Gabriela Lopes</b>
                         <em id ="userFullName"></em>
                      </div>
                      <div class="col-6 col-md-4">
-                        <b>Age: </b>
+                        <b>Age: 64</b>
                         <em id="userAge"></em>
                      </div>
                      <div class="col-6 col-md-4">
-                        <b>Gender:</b>
+                        <b>Gender: Female</b>
                         <em id="userGender"></em>
                      </div>
                   </div>
                   <div class="row">
                      <div class="col-6 col-md-4">
-                        <b>Weight: </b>
+                        <b>Weight: 66</b>
                         <em id="userWeight"></em>
                         <em> kg</em>
                      </div>
                      <div class="col-6 col-md-4">
-                        <b>Height: </b>
+                        <b>Height: 1,92</b>
                         <em id="userHeight"></em>
                         <em> m</em>
                      </div>
@@ -187,26 +187,58 @@
          <hr class="hr1">
          <div id="latestInf">
             <div class="row"> 
-               <div class="col-md-4"> <b>Blood Pressure</b>
-                  <p id="latest_bp"></p>
+               <!--div class="col-md-4"> <b>Blood Pressure</b>
+                  <p id="latest_bp"> 92</p>
+               </div>-->
+               <div class="col-sm-4">
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Blood pressure</h5>
+                      <p class="card-text">92</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+               </div>
+               <div class="col-sm-4">
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Body Tenperature</h5>
+                      <p class="card-text">38</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
                </div>
 
-               <div class="col-md-4"> <b>Body Temperature</b>
-                  <p id="latest_bt"></p>
-               </div>
-
-               <div class="col-md-4"> <b>Heart Rate</b>
-                  <p id="latest_hr"></p>
+               <div class="col-sm-4">
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Heart Rate</h5>
+                      <p class="card-text">88</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
                </div>
             </div>
 
             <br>
             <div class="row"> 
-               <div  class="col-md-6"> <b>Glycemia</b>
-                  <p id="latest_sl"></p>
+               <div class="col-sm-4">
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Glycemia</h5>
+                      <p class="card-text">0.56</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
                </div>
-               <div  class="col-md-6"> <b>Oxygen Saturation</b>
-                  <p id="latest_ol"></p>
+               <div class="col-sm-4">
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Oxygen Saturation</h5>
+                      <p class="card-text">0.66</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
                </div>
             
             </div>
