--- a/Prototype/MedStaffPage.html
+++ b/Prototype/MedStaffPage.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <meta charset="UTF-8"
+    <meta charset="UTF-8">
     <head>
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
-        <meta charset="UTF-8">
         <title> Medical Staff Page</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -154,6 +153,7 @@
         </div>
 
         <script>
+            //console.log(localStorage.getItem("medicalID"));       Não estou a conseguir salvar a sessão
             $(document).ready(function() {
                 $.ajax({
                     url: 'http://localhost:8080/doctors/types',
@@ -169,7 +169,7 @@
                                     xhr.setRequestHeader("Authorization", "Bearer 6QXNMEMFHNY4FJ5ELNFMP5KRW52WFXN5")
                                 }, success: function(data2){
                                     data2.forEach(ele => {
-                                        document.getElementById(element).innerHTML += '<div class="column"><div class="card"><h1>'+ele.name+'</h1><p class="age">'+ele.age+' anos</p><a href="#"><i class="fa fa-dribbble"></i></a><p><a href="PacientProfileMed.html?'+ele.id+'"><button type="submit">See More</button></a></p></div></div>'
+                                        document.getElementById(element).innerHTML += '<div class="column"><div class="card"><h1>'+ele.name+'</h1><p class="age">'+ele.age+' anos</p><p class="age">Health Service Number: '+ele.numUtente+'</p><a href="#"><i class="fa fa-dribbble"></i></a><p><a href="PacientProfileMed.html?'+ele.id+'"><button type="submit">See More</button></a></p></div></div>'
                                     })
                                 }
                             });
