--- a/Prototype/Regist/MedicalStaffRegister.html
+++ b/Prototype/Regist/MedicalStaffRegister.html
@@ -86,7 +86,7 @@
                         <a class="nav-link" href="../PacientsSearch.html">Search</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../HomePage/homePage.html">Logout</a>
+                        <a class="nav-link" href="../HomePage/homePage.html" onclick=clearStorage()>Logout</a>
                     </li>
                 </ul>
             </div>
@@ -136,7 +136,10 @@
           function myFunction() {
             alert("Medical Staff successfully registered!!");
           }
-          </script>
+          function clearStorage() {
+                window.sessionStorage.clear();
+          }
+        </script>
 
     </body>
 </html>
