--- a/Prototype/AdminPage.html
+++ b/Prototype/AdminPage.html
@@ -123,7 +123,7 @@
                         <a class="nav-link" href="PacientsSearch.html">Search</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="HomePage/homePage.html">Logout</a>
+                        <a class="nav-link" href="HomePage/homePage.html" onclick=clearStorage()>Logout</a>
                     </li>
                 </ul>
             </div>
@@ -161,6 +161,10 @@
 
 
 
-
+        <script>
+            function clearStorage() {
+                window.sessionStorage.clear();
+            }
+        </script>
     </body>
 </html>
