--- a/Prototype/MedStaffRemove.html
+++ b/Prototype/MedStaffRemove.html
@@ -87,7 +87,7 @@
                         <a class="nav-link" href="../PacientsSearch.html">Search</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../HomePage/homePage.html">Logout</a>
+                        <a class="nav-link" href="../HomePage/homePage.html" onclick=clearStorage()>Logout</a>
                     </li>
                 </ul>
             </div>
@@ -121,7 +121,10 @@
                     }
             });
           }
-          </script>
+          function clearStorage() {
+                window.sessionStorage.clear();
+          }
+        </script>
 
     </body>
 </html>
