--- a/Prototype/PacientProfileMed.html
+++ b/Prototype/PacientProfileMed.html
@@ -124,7 +124,7 @@
                      <a class="nav-link" href="PacientsSearch.html">Search</a>
                   </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="HomePage/homePage.html">Logout</a>
+                        <a class="nav-link" href="HomePage/homePage.html" onclick=clearStorage()>Logout</a>
                     </li>
                 </ul>
             </div>
@@ -287,6 +287,9 @@
                   });
                   
                });
+               function clearStorage() {
+                  window.sessionStorage.clear();
+               }
             </script>
         </body>
     </html>
