--- a/Prototype/PacientsSearch.html
+++ b/Prototype/PacientsSearch.html
@@ -129,7 +129,7 @@
                         <a class="nav-link" href="PacientsSearch.html">Search</a>
                      </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="HomePage/homePage.html">Logout</a>
+                        <a class="nav-link" href="HomePage/homePage.html" onclick=clearStorage()>Logout</a>
                     </li>
                 </ul>
             </div>
@@ -183,6 +183,9 @@
                      })
                   }
                });
+            }
+            function clearStorage() {
+               window.sessionStorage.clear();
             }
          </script>
     </body>
