--- a/Prototype/Regist/PacientsRegisterByMedStaff.html
+++ b/Prototype/Regist/PacientsRegisterByMedStaff.html
@@ -86,7 +86,7 @@
                     <a class="nav-link" href="../PacientsSearch.html">Search</a>
                   </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../HomePage/homePage.html">Logout</a>
+                        <a class="nav-link" href="../HomePage/homePage.html" onclick=clearStorage()>Logout</a>
                     </li>
                 </ul>
             </div>
@@ -135,6 +135,9 @@
         <script>
           function myFunction() {
             alert("Pacient successfully registered!!");
+          }
+          function clearStorage() {
+                window.sessionStorage.clear();
           }
         </script>
 
