--- a/WebServer/src/main/resources/static/index.html
+++ b/WebServer/src/main/resources/static/index.html
@@ -50,7 +50,7 @@
                         <h5 class="card-title">Medical Staff</h5>
                         <p class="card-text">Follow all your pacients in a remote way</p>
                         <div style="text-align: center; margin-top: 30%;">
-                            <a href="Logins/MedicalStaffLogin.html" class="btn btn-light">Login as medical staff</a>
+                            <a href="../Logins/MedicalStaffLogin.html" class="btn btn-light">Login as medical staff</a>
                         </div>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                         <h5 class="card-title">Pacients</h5>
                         <p class="card-text">See your personal information but also follow your glycemia levels and more. </p>
                         <div style="text-align: center; margin-top: 30%;">
-                            <a href="Logins/PacientLogin.html" class="btn btn-light">Login as pacient</a>
+                            <a href="../Logins/PacientLogin.html" class="btn btn-light">Login as pacient</a>
                         </div>
                     </div>
                 </div>
